Fixed word-wrapping of date in call log. Re #13

--- a/src/userinterface/static/css/callattendant.css
+++ b/src/userinterface/static/css/callattendant.css
@@ -7,6 +7,10 @@ body {
 .phoneno {
    width: 125px;
 }
+/* Set a fixed width for the date column */
+.date {
+   width: 90px;
+}
 /* Set a fixed width for the time column */
 .time {
    width: 95px;
